# numactl

./: .clang-format  .gitignore  .packit.yaml  .travis.yml  CHANGES  DESIGN  INSTALL  INSTALL.md  Makefile  Makefile.am  README  README.md  TODO  VERSION  affinity.c  affinity.h  bitops.c  bitops.h  clearcache.c  configure  configure.ac  cpumask.h  diff.Makefile  diff.numastat  diff.numastat.8b  diff_numastat.8  distance.c  get_mempolicy.2  getlibdir  head  import  int.h  libnuma.c  mbind.2  memhog.8  memhog.c  migratepages.8  migratepages.c  migspeed.8  migspeed.c  (+40 more)
.github/workflows/: clang-format-check.yml  codeql.yml  cut-release-tag.yml  cut-release.yml  makefile.yml
fuzz/: README.md  fuzz_parse_str.c
m4/: .gitignore  ax_am_override_var.m4
releases/: 2.0.4  2.0.5
test/: README  bind_range  checkaffinity  checktopology  distance.c  ftok.c  getnodemask.c  mbind_mig_pages.c  migrate_pages.c  move_pages  move_pages.c  mynode.c  node-parse.c  nodemap.c  numa-emu-2  numademo  pagesize.c  prefered.c  printcpu  randmap.c  realloc_test.c  regress  regress-io  regress2  runltp  shmtest  tbitmap.c  tmbind.c  tshared.c  tshm.c
